<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyoController</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_start_service_media">Start Media Service</string>
    <string name="action_stop_service_media">Stop Media Service</string>
    <string name="action_start_service">Start Other Service</string>
    <string name="action_stop_service">Stop Other Service</string>
    <string name="action_set_default">Set Connected Myo as Default</string>
	<string name="scan">Scan for Myo</string>
    <string name="pose_fist">Fist</string>
    <string name="pose_wavein">Wave In</string>
    <string name="pose_waveout">Wave Out</string>
    <string name="pose_fingersspread">Fingers Spread</string>
    <string name="pose_rest">Rest</string>
    <string name="arm_left">Left Arm</string>
    <string name="arm_right">Right Arm</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <string name="myosdk__title_activity_scan">Choose a Myo</string>
    <string name="myosdk__action_scan">Scan</string>
    <string name="myosdk__action_stop_scan">Stop Scan</string>
    <string name="myosdk__unknown_myo">Unknown Myo</string>
    <string name="myosdk__firmware_version_format">Version: %s</string>
    <string name="myosdk__firmware_required_format">Required: %s or newer</string>
    <string name="connected">Connected"</string>
    <string name="disconnected">Disconnected</string>
    <string name="pose">Pose: %s</string>
    <string name="service_name">BackgroundService</string>
    <string name="U">Fist</string>
    <string name="D">Finger Spread</string>
    <string name="R">Wave Out </string>
    <string name="L">Wave In</string>
    <string name="title_activity_stats">Stats</string>
    <string name="gameover">GameOver</string>
    <string name="newgame">New Game</string>
    <string name="maxscore">Max Score</string>
    
    
</resources>
