<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myocontroller.Configuration" >

	<item
		android:id="@+id/action_scan"
		android:showAsAction="never"
		android:title="@string/scan"
	/>
	
	<item
		android:id="@+id/action_set_default"
		android:showAsAction="never"
		android:title="@string/action_set_default"
	/>
	
	<item
		android:id="@+id/action_start_service_media"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_start_service_media"
	/>
	
	<item
		android:id="@+id/action_stop_service_media"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_stop_service_media"
	/>
	
	<item
		android:id="@+id/action_start_service"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_start_service"
	/>
	
	<item
		android:id="@+id/action_stop_service"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/action_stop_service"
	/>
</menu>
